# vins-fusion-py-ros2

./: .gitignore  README.md  exec.sh
config/euroc/: euroc_mono_imu_config.yaml  euroc_stereo_config.yaml  euroc_stereo_imu_config.yaml
config/morroco/: mor.yaml
docker/: Dockerfile  Makefile
eval/: compute_plot_data.py  correct_format.py  evaluate.py  find_failure.py  plot_bar.py  plot_trajectory.py  trajectory_metrics_mono.csv  trajectory_metrics_stereo.csv
eval/per-frame-pos/: OPEN_VINS_mono_V1_01_easy.csv  OPEN_VINS_mono_V1_02_medium.csv  OPEN_VINS_mono_V1_03_difficult.csv  OPEN_VINS_mono_V2_01_easy.csv  OPEN_VINS_mono_V2_02_medium.csv  OPEN_VINS_mono_V2_03_difficult.csv  OPEN_VINS_stereo_V1_01_easy.csv  OPEN_VINS_stereo_V1_02_medium.csv  OPEN_VINS_stereo_V1_03_difficult.csv  OPEN_VINS_stereo_V2_01_easy.csv  OPEN_VINS_stereo_V2_02_medium.csv  OPEN_VINS_stereo_V2_03_difficult.csv  ORB_SLAM3_VIO_mono_V1_01_easy.csv  ORB_SLAM3_VIO_mono_V1_02_medium.csv  ORB_SLAM3_VIO_mono_V1_03_difficult.csv  ORB_SLAM3_VIO_mono_V2_01_easy.csv  ORB_SLAM3_VIO_mono_V2_02_medium.csv  ORB_SLAM3_VIO_mono_V2_03_difficult.csv  ORB_SLAM3_VIO_stereo_V1_01_easy.csv  ORB_SLAM3_VIO_stereo_V1_02_medium.csv  ORB_SLAM3_VIO_stereo_V1_03_difficult.csv  ORB_SLAM3_VIO_stereo_V2_01_easy.csv  ORB_SLAM3_VIO_stereo_V2_02_medium.csv  ORB_SLAM3_VIO_stereo_V2_03_difficult.csv  ORB_SLAM3_mono_V1_01_easy.csv  ORB_SLAM3_mono_V1_02_medium.csv  (+34 more)
global_fusion/: CMakeLists.txt
python/: pyproject.toml
python/global_fusion/: package.xml  pyproject.toml
python/global_fusion/global_fusion/: __init__.py
(+152 files in other folders)
