<?xml version="1.0"?>
<package format="3">
  <name>vins_global_fusion</name>
  <version>1.0.0</version>
  <description>GPS/global pose fusion for VINS-Fusion (Python)</description>
  <maintainer email="maintainer@example.com">VINS Team</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
