[project]
name = "vins-global-fusion"
version = "1.0.0"
description = "GPS/global pose fusion for VINS-Fusion (Python)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "pyproj>=3.6",
]

[project.scripts]
global_fusion_node = "global_fusion.ros_node:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["global_fusion"]
